Implement controller for saving data to database

--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Register Form</title>
 </head>
 <body>
     <div class="form-container">
         <h1 class="form-title">Registration Form</h1>
-        <%= form_with url: '/register', method: 'post', local: true do |f| %>
+        <%= form_with(model: @user,url: user_path) do |f| %>
 
             <div class="form-group">
                 <%= f.label :firstname, "First Name" %>
@@ -55,4 +53,3 @@
         <% end %>
     </div>
 </body>
-</html>
