Create page to show user registration details

--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -50,6 +50,7 @@
             </div>
 
             <button type="submit">Submit</button>
+            <%= link_to "Back", user_path %>
         <% end %>
     </div>
 </body>
