--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,26 +1,41 @@
-<table>
-  <thead>
-    <tr class="header">
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Birthday</th>
-      <th>Gender</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Subject</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @user.each do |user| %>
-      <tr>
-        <td><%= user.firstname %></td>
-        <td><%= user.lastname %></td>
-        <td><%= user.birthday %></td>
-        <td><%= user.gender %></td>
-        <td><%= user.email %></td>
-        <td><%= user.phone %></td>
-        <td><%= user.subject %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tablelist</title>
+</head>
+<body>
+
+<div class="container">
+    <%= link_to 'Back', 'user/new', class: 'back-btn' %>
+  <div class="headerAdd">
+    <%= button_to 'Add new user','user/new',method: :get, class: 'add-user-btn' %>
+  </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Birthday</th>
+                <th>Gender</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Subject</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <% @user.each do |user| %>
+            <tr>
+                <td><%= user.firstname %></td>
+                <td><%= user.lastname %></td>
+                <td><%= user.birthday %></td>
+                <td><%= user.gender %></td>
+                <td><%= user.email %></td>
+                <td><%= user.phone %></td>
+                <td><%= user.subject %></td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
