--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
+    margin: 20px;
 }
 
 form {
@@ -38,7 +38,7 @@ select {
 }
 
 button {
-    width: 100px;
+    width: 150px;
     padding: 10px;
     background-color: #5f72ca;
     color: white;
@@ -46,8 +46,9 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 10px;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
@@ -97,3 +98,42 @@ button:hover {
 .radio-group input[type="radio"] {
     margin-right: 10px;
 }
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 50px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+    margin-top: 20px;
+}
+td {
+    vertical-align: middle;
+}
+
+.back-btn {
+    color: #333;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    margin-top: 10px;
+}
+
