Improved UI and updated layout for the registration and show pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 20px;
+    background-attachment: fixed;
 }
 
 form {
@@ -37,7 +38,7 @@ select {
     background-repeat: no-repeat;
 }
 
-button {
+.submit-btn {
     width: 150px;
     padding: 10px;
     background-color: #5f72ca;
@@ -48,7 +49,7 @@ button {
     font-weight: bold;
     font-size: 16px;
     margin-top: 10px;
-    transition: background-color 0.3s ease;
+    justify-self: end;
 }
 
 button:hover {
@@ -61,13 +62,14 @@ button:hover {
     font-weight: bold;
     color: #5f72ca;
     margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .form-container {
     background-color: white;
     border-radius: 16px;
     width: 600px;
-    padding: 70px;
+    padding: 60px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -128,12 +130,20 @@ td {
 }
 
 .back-btn {
-    color: #333;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    margin-top: 10px;
+    color: gray;
+    font-weight: 200;
+    font-size: 14px;
 }
 
+.add-user-btn{
+    width: 150px;
+    padding: 10px;
+    background-color: #5f72ca;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 10px;
+}
